--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -14,6 +14,9 @@ $primary-white: #fff5ec;
 $secondary-black: #000000;
 $secondary-white: #ffffff;
 
+$primary-red: rgb(219, 97, 138);
+$secondary-red: rgb(202, 68, 68);
+
 
 // MEDIA QUERIES
 
