--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,11 +1,34 @@
 @use '../../styles/partials/mixins' as *;
 
 .hero {
+
     @include hero (url('../../assets/images/misty-lake.jpg'), 63vw, 50%);
 
     &--overlay {
         display: flex;
-        flex-direction: column;
         justify-content: center;
+
+        @include tablet {
+            align-items: end;
+            justify-content: flex-start;
+        }
+    }
+
+    &__container {
+
+        @include tablet {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+    }
+
+    &__text {
+        margin: 1.36rem;
+
+        @include tablet {
+            width: 66%;
+
+        }
     }
 }
