--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -11,6 +11,7 @@ body {
     font-size: 0.875rem;
     margin: 0;
     color: $primary-black;
+    background-color: $primary-white;
 }
 
 h1, h2, h3, h4 {
@@ -20,15 +21,28 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: 2.69rem;
+    font-size: 1.69rem;
+    @include tablet {
+        font-size: 2.69rem;
+    }
+
+    @include desktop {
+        font-size: 3.69rem;
+    }
 }
 
 h2 {
-    font-size: 1.25rem;
+    font-size: 0.969rem;
+    @include tablet {
+        font-size: 1.25rem;
+    }
 }
 
 h3 {
-    font-size: 1.125rem;
+    font-size: 0.696rem;
+    @include tablet {
+        font-size: 1.125rem;
+    }
 }
 
 li {
