--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,7 +12,7 @@ $primary-black: #323232;
 $primary-white: #fff5ec;
 
 $secondary-black: #000000;
-$secondary-white: #ffffff;
+$secondary-white: #f2e3d6;
 
 $primary-red: rgb(219, 97, 138);
 $secondary-red: rgb(202, 68, 68);
