--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,11 +4,11 @@
     background-color: $primary-black;
     color: $primary-white;
     width: 100%;
+    height: 20vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 9.369rem;
 
     &__social {
         margin: 1.369rem;
