--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -17,7 +17,7 @@
     }
     
 &__div {
-    width: 30%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,6 +26,10 @@
 }
 
 .container {
-    width: 80%;
-    margin: auto;
+    margin: 1.369rem;
+
+    @include tablet {
+        width: 80%;
+        margin: auto;
+    }
 }
