--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -22,8 +22,10 @@ h1, h2, h3, h4 {
 
 h1 {
     font-size: 1.69rem;
+    margin: 3.369rem 0;
     @include tablet {
         font-size: 2.69rem;
+        margin-top: 0;
     }
 
     @include desktop {
