--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -12,6 +12,8 @@ body {
     margin: 0;
     color: $primary-black;
     background-color: $primary-white;
+
+    @include background ();
 }
 
 h1, h2, h3, h4 {
