--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -109,3 +109,14 @@
         cursor: pointer;
     }
 }
+
+//BACKGROUND
+
+@mixin background () {
+    background-image: url(../../assets/images/ed-hero.png);
+    background-repeat: no-repeat;
+    background-position: 100%;
+    background-size: cover; 
+    height: 100%;
+    width: 100%;
+}
