minor layout changes

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,12 +10,8 @@
     justify-content: center;
     align-items: center;
 
-    &__social {
-        margin: 1.369rem;
-    }
-
     &__copyright {
-        margin: 1.369rem;
+        margin: 1.369rem 0 0.396rem 0;
     }
 
     &__text {
