--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -2,27 +2,36 @@
 @use '../../styles/partials/variables' as *;
 
 .contact {
-    margin: 3.369rem 1.369rem 0 1.369rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 70vh;
     
     @include desktop {
-        flex-direction: row;
-        width: 80%;
+        width: 100%;
         justify-content: center;
         align-items: flex-start;
         margin: auto;
     }
     
-&__div {
-    width: 100%;
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    &__div {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__email {
+        padding-bottom: 3.369rem;
+        border-bottom: 1px solid $primary-black;
+    }
+
+    &__social-icon {
+        scale: 1.9;
+        margin: 1.369rem;
+    }
 
 }
 
@@ -32,5 +41,33 @@
     @include tablet {
         width: 80%;
         margin: auto;
+    }
+
+    &__sub {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        
+        @include desktop {
+            flex-direction: row;
+        }
+    }
+
+    &__left {
+
+        @include tablet {
+            width: 69%;
+        }
+    }
+
+    &__right {
+        @include desktop {
+            width: 31%;
+            border-left: 1px solid $primary-black;
+            margin: 0 0 3.369rem 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
     }
 }
